# Chatopea-Backend

./: Dockerfile  pyproject.toml  railway.json  requirements.txt
Schemas/: schemas.py
apis/: api.py
apis/endpionts/: message.py
config/: api.py  database.py
crud/: message.py
db/: models.py
