[tool.poetry]
name = "Chatopea"
version = "0.1.0"
description = "This Is Real Time Chat Application"
authors = ["Abdul-Basit-Ansari <abdulbasitansari288@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.80.0"
uvicorn = "^0.18.3"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"